--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,70 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    app:flexDirection="column"
+    app:justifyContent="space_between"
     tools:context=".MainActivity">
+
+    <!--    HEADER   -->
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:justifyContent="center"
+        android:layout_height="400px"
+        app:justifyContent="space_between"
         app:alignItems="center"
-        app:flexDirection="column"
-        android:padding="50px">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="600px"
-            android:background="#ccc"
-            android:textAlignment="center"
-            android:layout_margin="20px"
-            android:src="@drawable/Logo"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            />
-        <TextView
-            android:layout_width="200px"
-            android:background="lue"
-            android:layout_height="wrap_content"
-            android:text="Sign In"
-            />
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:layout_width="800px"
-            android:layout_height="100px"
-            android:layout_marginTop="20px"
-            />
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:layout_width="800px"
-            android:layout_height="100px"
-            android:layout_marginTop="20px"
-            />
-        <TextView
+        android:background="@drawable/information_span">
+        <com.google.android.flexbox.FlexboxLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Forget password"
-            android:layout_margin="20px"
-            />
-        <Button
-            android:layout_width="400px"
-            android:layout_height="120px"
-            android:text="Sign"
-            android:layout_margin="20px"
-            />
-
-        <Button
-            android:layout_width="400px"
-            android:layout_height="120px"
-            android:text="Register"
-            android:layout_margin="20px"
-            />
-
-
-
-
-
+            android:layout_height="match_parent"
+            app:justifyContent="center"
+            app:alignItems="center">
+            <ImageView
+                android:layout_margin="50px"
+                android:layout_width="@dimen/avatar_size_medium"
+                android:layout_height="@dimen/avatar_size_medium"
+                android:background="@drawable/avatar"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="130px"
+                android:gravity="center_vertical"
+                android:background="@drawable/bubble_chat"
+                android:paddingLeft="50px"
+                android:paddingRight="50px"
+                android:textColor="@color/primary_dark_deep"
+                android:textStyle="bold"
+                android:text="Hello user!">
+            </TextView>
+        </com.google.android.flexbox.FlexboxLayout>
+        <LinearLayout
+            android:padding="20px"
+            android:layout_width="150px"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="100px"
+                android:layout_height="100px"
+                android:background="@drawable/notification_icon"/>
+        </LinearLayout>
     </com.google.android.flexbox.FlexboxLayout>
-    
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--    CONTENT     -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vpPager"
+        android:layout_width="match_parent"
+        android:layout_height="1550px">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/pager_tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            app:tabGravity="center"
+            android:background="@color/white_gray"
+            android:layout_gravity="bottom"/>
+    </androidx.viewpager.widget.ViewPager>
+</com.google.android.flexbox.FlexboxLayout>
